# selective_search_py

./: .gitignore  CMakeLists.txt  LICENSE.txt  README.md  color_space.py  demo_showcandidates.py  demo_showhierarchy.py  features.py  requirements.txt  segment_py.cpp  selective_search.py  selective_search_features.py  similarity.py  test_color_space.py  test_features.py  test_merge_region.py  test_selective_search.py  test_selective_search_features.py  test_similarity.py
